# fastapi-advanced-rest-template

./: .env.ci  .env.example  .gitignore  Makefile  README.md  docker-compose.common.yml  docker-compose.yml  techstack.md  techstack.yml
api/: .flake8  Dockerfile  Dockerfile.dev  README.md  do-autoformat-and-clean.sh  do-autoformat.sh  do-lint.sh  do-test.sh  pyproject.toml  requirements.dev.txt  requirements.txt  run-static-analyzers.sh
api/alembic/: env.py
api/alembic/versions/: 5f02da3a2e06_create_users_table.py  63188c0f98b6_create_users_table.py  a55fe31fde28_create_tasks_table.py  abdd40524cc7_create_users_table.py
api/app/: config.py  main.py
api/app/api/: api.py
api/app/core/: db.py  exceptions.py  security.py
api/app/db/: base.py  session.py
api/app/endpoints/: api.py  api_router.py  validators.py
api/app/enums/: __init__.py  task_visibility_status_enum.py
api/app/models/: __init__.py  base.py  task.py  user.py
api/app/schemas/: base.py  task.py  user.py
api/app/services/: __init__.py  base_service.py  exceptions.py  task_service.py  user_service.py
api/tests/: common.py  conftest.py  seed_database.py
api/tests/api/: test_login.py  test_main.py  test_tasks.py  test_users.py
api/tests/factories/: __init__.py  functions.py  task.py  user.py
api/tests/schemas/: __init__.py  task.py  user.py
api/tests/services/: test_task_service.py  test_user_service.py
application/: .gitignore  Dockerfile  Dockerfile.dev  README.md  do-autoformat-and-clean.sh  do-lint.sh  do-test.sh  mypy.ini  pyproject.toml  requirements.txt
application/alembic/: env.py
application/alembic/versions/: 5f02da3a2e06_create_users_table.py  9dd80e6dbed2_add_indices_on_todo_items_table.py  c64d586eeb63_create_tasks_table.py  c64d586eeb63_create_todo_items_table.py
application/api/: api.py
application/app/: main.py
application/src/: config.py  main.py
application/tests/: common.py  conftest.py  seed_database.py
(+92 files in other folders)
