[tool.poetry]
name = "daily-rabbit-api"
version = "0.1.0"
description = ""
authors = ["golubev <951364+golubev@users.noreply.github.com>"]

[tool.poetry.group.main.dependencies]
python = "^3.11"
alembic = "1.10.*"
email-validator = "1.3.*"
fastapi = "0.95.*"
passlib = {version = "1.7.*", extras = ["bcrypt"]}
pydantic = "1.10.*"
python-jose = {version = "3.3.*", extras = ["cryptography"]}
python-multipart = "0.0.*"
psycopg2-binary = "2.9.*"
sqlalchemy = "1.4.*"
uvicorn = "0.22.*"

[tool.poetry.group.dev.dependencies]
autoflake = "1.7.*"
black = "23.3.*"
flake8 = "5.0.*"
isort = "5.12.*"
mypy = "1.2.*"
sqlalchemy = {version = "1.4.*", extras = ["mypy"]}
types-passlib = "1.7.*"
types-python-jose = "3.3.*"
